k8s-deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: merchant-system
  labels:
    name: merchant-system
