k8s-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: merchant-ingress
  namespace: merchant-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ca-central-1:168787218791:certificate/4bd1c1e9-eefc-47db-9d03-114861af516f
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
spec:
  rules:
  - host: swiftmerchantplatform.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: merchant-admin
            port:
              number: 80
  - host: api.swiftmerchantplatform.com
    http:
      paths:
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8081
      - path: /api/business
        pathType: Prefix
        backend:
          service:
            name: business-service
            port:
              number: 8083
      - path: /api/merchant
        pathType: Prefix
        backend:
          service:
            name: merchant-service
            port:
              number: 8082
      - path: /api/analytics
        pathType: Prefix
        backend:
          service:
            name: analytics-service
            port:
              number: 8086
      - path: /api/notification
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 8084
      - path: /api/ai
        pathType: Prefix
        backend:
          service:
            name: ai-service
            port:
              number: 5000
      - path: /api/files
        pathType: Prefix
        backend:
          service:
            name: file-service
            port:
              number: 80
